--- a/src/App.css
+++ b/src/App.css
@@ -67,45 +67,37 @@ body {
   flex-direction: column;
   font-family: "Overpass Mono", monospace;
 }
-.num_box {
-  max-width: 341px;
-  width: 100%;
+.oval_div1 {
+  width: 296px;
   height: 51px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
 }
-.key_box {
-  justify-self: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(38, 46, 56, 1);
-  cursor: pointer;
-  margin: 5px;
-  max-width: 341px;
+.oval_div {
+  max-width: 51px;
   width: 100%;
-  display: contents;
-  height: 51px;
-}
-.key_box span {
+  min-height: 51px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: rgba(38, 46, 56, 1);
+  border-radius: 100%;
+  background-color: #262e38;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #7c8798;
 }
-
-.key_box span.active {
-  background: orange;
+.oval_divbox,
+.oval_divbox .oval_divbox:active {
+  background-color: #fc7614;
   color: white;
 }
-.key_box span:hover {
-  background-color: orange;
-  color: white;
+.oval_div:hover {
+  cursor: pointer;
 }
 
 .last_box {
@@ -117,16 +109,30 @@ body {
   background-color: rgba(252, 118, 20, 1);
   border-radius: 50px;
 }
-.sub {
-  height: 23px;
-
-  font-size: 15px;
-  color: white;
+.btn {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 45px;
+  background-color: #fc7614;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 100%;
+  letter-spacing: 2px;
+  color: white;
+  border: none;
+  border-radius: 22.5px;
 }
+
+.btn:hover {
+  background-color: white;
+  color: #fc7614;
+  cursor: pointer;
+}
+.img {
+  max-width: 144px;
+  width: 100%;
+  height: 96px;
+}
+
 @media (max-width: 302px) {
   .last_box {
     max-width: 250px;
@@ -145,11 +151,7 @@ body {
   .header {
     font-size: 10px;
   }
-  .key_box {
-    width: 100%;
-    max-width: 250px;
-  }
-  .key_box span {
+  .oval_div1 {
     max-width: 250px;
     width: 100%;
   }
